--- a/ExtLibs/GMap.NET.WindowsForms/GMap.NET.WindowsForms.csproj
+++ b/ExtLibs/GMap.NET.WindowsForms/GMap.NET.WindowsForms.csproj
@@ -51,6 +51,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OpenTK">
+      <HintPath>..\OpenTK.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenTK.GLControl">
+      <HintPath>..\OpenTK.GLControl.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -60,6 +66,9 @@
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="GMap.NET.WindowsForms\ColorMatrixs.cs" />
+    <Compile Include="GMap.NET.WindowsForms\GLGraphics.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="GMap.NET.WindowsForms\GMapPolygon.cs" />
     <Compile Include="GMap.NET.WindowsForms\Markers\GMarkerGoogle.cs" />
     <Compile Include="GMap.NET.WindowsForms\ToolTips\GMapBaloonToolTip.cs" />
