--- a/SikRadio/app.config
+++ b/SikRadio/app.config
@@ -30,6 +30,21 @@
     </root>
   </log4net>
   <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Windows.Forms"
+                          publicKeyToken="b77a5c561934e089"
+                          culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0"
+                         newVersion="4.0.0.1"/>
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
-
+  <system.diagnostics>
+    <trace useGlobalLock="false" autoflush="true" indentsize="0">
+      <listeners>
+        <add name="myListener" type="System.Diagnostics.TextWriterTraceListener, system version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="c:\myListener.log" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>
