--- a/app.config
+++ b/app.config
@@ -46,5 +46,21 @@
   </log4net>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true" />
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Windows.Forms"
+                          publicKeyToken="b77a5c561934e089"
+                          culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0"
+                         newVersion="4.0.0.1"/>
+      </dependentAssembly>
+      <dependentAssembly>
+      <assemblyIdentity name="System.Drawing"
+                  publicKeyToken="B03F5F7F11D50A3A"
+                  culture="neutral" />
+      <bindingRedirect oldVersion="0.0.0.0-4.0.0.0"
+                       newVersion="4.0.0.1"/>
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
 </configuration>
