--- a/ExtLibs/Controls/packages.config
+++ b/ExtLibs/Controls/packages.config
@@ -3,6 +3,8 @@
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="OpenTK" version="3.0.0-pre" targetFramework="net462" />
+  <package id="OpenTK.GLControl" version="3.0.0-pre" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
