--- a/packages.config
+++ b/packages.config
@@ -32,6 +32,8 @@
   <package id="netDXF" version="2.0.2" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
+  <package id="OpenTK" version="3.0.0-pre" targetFramework="net462" />
+  <package id="OpenTK.GLControl" version="3.0.0-pre" targetFramework="net462" />
   <package id="ProjNet" version="1.2" targetFramework="net40" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net40" requireReinstallation="true" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net40" requireReinstallation="true" />
