--- a/MissionPlanner.csproj
+++ b/MissionPlanner.csproj
@@ -4347,6 +4347,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="appveyor.yml" />
+    <None Include="arduplane.apj">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="azure-pipelines.yml" />
     <None Include="block_plane_0.dae">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
